exports[`test a.js 1`] = `
"// @flow
var a: string = 0;
module.exports = a;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var a: string = [object Number];
module.exports = a;
"
`;

exports[`test b.js 1`] = `
"// @flow
var a = require('./a');
var b: number = a;
module.exports = b;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var a = require("./a");
var b: number = a;
module.exports = b;
"
`;

exports[`test c.js 1`] = `
"// @flow
var b = require('./b');
var c: string = b;
module.exports = c;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var b = require("./b");
var c: string = b;
module.exports = c;
"
`;
